RESOLVED FIXED65001
REGRESSION(r90971): Placeholder and search cancel button are visible even in elements with visibility:hidden
https://bugs.webkit.org/show_bug.cgi?id=65001
Summary REGRESSION(r90971): Placeholder and search cancel button are visible even in ...
Kent Tamura
Reported 2011-07-21 18:08:43 PDT
http://code.google.com/p/chromium/issues/detail?id=90090 Shadow elements doesn't inherit the 'visibility' style?
Attachments
Patch (6.04 KB, patch)
2011-07-21 18:28 PDT, Kent Tamura
dglazkov: review+
webkit.review.bot: commit-queue-
Kent Tamura
Comment 1 2011-07-21 18:10:19 PDT
(In reply to comment #0) > Shadow elements doesn't inherit the 'visibility' style? Ah, they do. We set 'visibility' explicitly for placeholder nodes and search cancel buttons.
Kent Tamura
Comment 2 2011-07-21 18:28:42 PDT
Dimitri Glazkov (Google)
Comment 3 2011-07-21 18:43:42 PDT
Comment on attachment 101684 [details] Patch hello the long tail of obscure bugs.
Kent Tamura
Comment 4 2011-07-21 19:37:28 PDT
Comment on attachment 101684 [details] Patch Thanks!
WebKit Review Bot
Comment 5 2011-07-21 20:17:24 PDT
Comment on attachment 101684 [details] Patch Attachment 101684 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9191913 New failing tests: fast/forms/search-styled.html fast/forms/placeholder-pseudo-style.html fast/forms/textarea-placeholder-pseudo-style.html fast/forms/password-placeholder.html fast/forms/textarea-placeholder-wrapping.html fast/forms/placeholder-position.html fast/css/pseudo-cache-stale.html fast/forms/password-placeholder-text-security.html fast/forms/isindex-placeholder.html fast/forms/input-placeholder-text-indent.html fast/forms/placeholder-stripped.html
Kent Tamura
Comment 6 2011-07-21 20:24:16 PDT
(In reply to comment #5) > (From update of attachment 101684 [details]) > Attachment 101684 [details] did not pass chromium-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/9191913 > > New failing tests: > fast/forms/search-styled.html > fast/forms/placeholder-pseudo-style.html > fast/forms/textarea-placeholder-pseudo-style.html > fast/forms/password-placeholder.html > fast/forms/textarea-placeholder-wrapping.html > fast/forms/placeholder-position.html > fast/css/pseudo-cache-stale.html > fast/forms/password-placeholder-text-security.html > fast/forms/isindex-placeholder.html > fast/forms/input-placeholder-text-indent.html > fast/forms/placeholder-stripped.html Oops, we should not check renderer() in placeholderShouldBeVisible(). I'll fix it.
Kent Tamura
Comment 7 2011-07-21 20:31:41 PDT
Kent Tamura
Comment 8 2011-07-21 22:36:10 PDT
Alexey Proskuryakov
Comment 9 2011-09-29 21:57:08 PDT
*** Bug 30608 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.