REGRESSION(r90971): Placeholder and search cancel button are visible even in elements with visibility:hidden. https://bugs.webkit.org/show_bug.cgi?id=65001

Reviewed by Dimitri Glazkov.

Source/WebCore:

Tests: fast/forms/placeholder-in-invisible-elements.html
       fast/forms/search-cancel-in-invisible-elements.html

* html/HTMLTextFormControlElement.cpp:
(WebCore::HTMLTextFormControlElement::placeholderShouldBeVisible):
Don't show the placeholder if the 'visibility' property of the owner element is 'hidden.'
* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::visibilityForCancelButton): ditto.

LayoutTests:

* fast/forms/placeholder-in-invisible-elements-expected.html: Added.
* fast/forms/placeholder-in-invisible-elements.html: Added.
* fast/forms/search-cancel-in-invisible-elements-expected.html: Added.
* fast/forms/search-cancel-in-invisible-elements.html: Added.

Canonical link: https://commits.webkit.org/80744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91550 268f45cc-cd09-0410-ab3c-d52691b4dbfc